RESOLVED FIXED224995
numCalleeLocals, numParameters, and numVars should be unsigned
https://bugs.webkit.org/show_bug.cgi?id=224995
Summary numCalleeLocals, numParameters, and numVars should be unsigned
Keith Miller
Reported 2021-04-23 14:15:12 PDT
numCalleeLocals and numVars should be unsigned
Attachments
Patch (36.33 KB, patch)
2021-04-24 12:14 PDT, Keith Miller
no flags
Patch (37.03 KB, patch)
2021-04-26 07:33 PDT, Keith Miller
no flags
Patch (37.07 KB, patch)
2021-04-26 11:07 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2021-04-24 12:14:54 PDT
Keith Miller
Comment 2 2021-04-26 07:33:21 PDT
Keith Miller
Comment 3 2021-04-26 11:07:53 PDT
Mark Lam
Comment 4 2021-04-26 11:21:32 PDT
Comment on attachment 427064 [details] Patch r=me
Keith Miller
Comment 5 2021-04-26 12:53:28 PDT
Crashes on EWS seem unlikely to be related. I'm gonna CQ+
EWS
Comment 6 2021-04-26 13:20:23 PDT
Committed r276609 (237038@main): <https://commits.webkit.org/237038@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427064 [details].
Radar WebKit Bug Importer
Comment 7 2021-04-26 13:21:53 PDT
Note You need to log in before you can comment on or make changes to this bug.