Source/JavaScriptCore/wasm/WasmFunctionCodeBlock.h
@@ -65,15 +65,15 @@ public:
     }
 
     uint32_t functionIndex() const { return m_functionIndex; }
-    int numVars() const { return m_numVars; }
-    int numCalleeLocals() const { return m_numCalleeLocals; }
+    unsigned numVars() const { return m_numVars; }
+    unsigned numCalleeLocals() const { return m_numCalleeLocals; }
     uint32_t numArguments() const { return m_numArguments; }
     const Vector<Type>& constantTypes() const { return m_constantTypes; }
     const Vector<uint64_t>& constants() const { return m_constants; }
     const InstructionStream& instructions() const { return *m_instructions; }
 
-    void setNumVars(int numVars) { m_numVars = numVars; }
-    void setNumCalleeLocals(int numCalleeLocals) { m_numCalleeLocals = numCalleeLocals; }
+    void setNumVars(unsigned numVars) { m_numVars = numVars; }
+    void setNumCalleeLocals(unsigned numCalleeLocals) { m_numCalleeLocals = numCalleeLocals; }
 
     ALWAYS_INLINE uint64_t getConstant(VirtualRegister reg) const { return m_constants[reg.toConstantIndex()]; }
     ALWAYS_INLINE Type getConstantType(VirtualRegister reg) const
@@ -126,9 +126,9 @@ private:
     uint32_t m_functionIndex;
 
     // Used for the number of WebAssembly locals, as in https://webassembly.github.io/spec/core/syntax/modules.html#syntax-local
-    int m_numVars { 0 };
+    unsigned m_numVars { 0 };
     // Number of VirtualRegister. The naming is unfortunate, but has to match UnlinkedCodeBlock
-    int m_numCalleeLocals { 0 };
+    unsigned m_numCalleeLocals { 0 };
     uint32_t m_numArguments { 0 };
     Vector<Type> m_constantTypes;
     Vector<uint64_t> m_constants;
